finally fix background flickers in android phone

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ header {
 #main {
   flex: 1 1 auto;
   background-color: #c5c5c5;
+  backface-visibility: hidden;
 
   display: flex;
   align-items: center;
